crates/shipper-core/src/plan/chunking/snapshots/shipper_core__plan__chunking__snapshot_tests__snapshot_chunk_10_items_by_5.snap
---
source: crates/shipper-core/src/plan/chunking/mod.rs
expression: "chunk_by_max_concurrent(&items, 5)"
---
- - 1
  - 2
  - 3
  - 4
  - 5
- - 6
  - 7
  - 8
  - 9
  - 10
