crates/shipper-core/src/plan/chunking/snapshots/shipper_core__plan__chunking__snapshot_tests__snapshot_chunk_13_items_by_4_with_remainder.snap
---
source: crates/shipper-core/src/plan/chunking/mod.rs
expression: "chunk_by_max_concurrent(&items, 4)"
---
- - a
  - b
  - c
  - d
- - e
  - f
  - g
  - h
- - i
  - j
  - k
  - l
- - m
