crates/shipper-core/src/plan/chunking/snapshots/shipper_core__plan__chunking__snapshot_tests__snapshot_chunk_7_items_by_3.snap
---
source: crates/shipper-chunking/src/lib.rs
expression: "chunk_by_max_concurrent(&items, 3)"
---
[
    [
        "alpha",
        "bravo",
        "charlie",
    ],
    [
        "delta",
        "echo",
        "foxtrot",
    ],
    [
        "golf",
    ],
]
