crates/shipper-core/src/plan/chunking/snapshots/shipper_core__plan__chunking__snapshot_tests__snapshot_chunk_large_list_by_7.snap
---
source: crates/shipper-core/src/plan/chunking/mod.rs
expression: "chunk_by_max_concurrent(&items, 7)"
---
[
    [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
    ],
    [
        8,
        9,
        10,
        11,
        12,
        13,
        14,
    ],
    [
        15,
        16,
        17,
        18,
        19,
        20,
        21,
    ],
]
