crates/shipper-core/src/plan/chunking/snapshots/shipper_core__plan__chunking__snapshot_tests__snapshot_chunk_max_concurrent_usize_max.snap
---
source: crates/shipper-core/src/plan/chunking/mod.rs
expression: "chunk_by_max_concurrent(&items, usize::MAX)"
---
[
    [
        "x",
        "y",
        "z",
    ],
]
